// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnderlinedLink /> renders <UnderlinedLink /> with an icon as <a /> tag 1`] = `
<li>
  <a
    class="styles-ja41pm-0 bnUlAN"
    href="https://reactjs.org/"
    to=""
  >
    <i
      class="fas fa-code"
    />
    <p>
      learn about React
    </p>
  </a>
</li>
`;

exports[`<UnderlinedLink /> renders <UnderlinedLink /> without icon as react-router-dom's <Link /> tag 1`] = `
<li>
  <a
    class="styles-ja41pm-0 epeoBL"
    href="/log-in"
  >
    
    <p>
      log in
    </p>
  </a>
</li>
`;
